complete vehicle category , policy type and vehicle price analysis

--- a/Vehicle Insurance.ipynb
+++ b/Vehicle Insurance.ipynb
@@ -4380,7 +4380,8 @@
     "2. 30000 to 39000 \n",
     "3. more than 69000\n",
     "4. less than 20000\n",
-    "5. "
+    "5. 40000 to 59000\n",
+    "6. 60000 to 69000 (Lowest)"
    ]
   },
   {
