prepare data for train a model

--- a/VehicleInsuranceCLASSIFICATION.ipynb
+++ b/VehicleInsuranceCLASSIFICATION.ipynb
@@ -830,201 +830,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>WeekOfMonth</th>\n",
-       "      <th>WeekOfMonthClaimed</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>FraudFound_P</th>\n",
-       "      <th>PolicyNumber</th>\n",
-       "      <th>RepNumber</th>\n",
-       "      <th>Deductible</th>\n",
-       "      <th>DriverRating</th>\n",
-       "      <th>Year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>WeekOfMonth</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.275400</td>\n",
-       "      <td>-0.007643</td>\n",
-       "      <td>-0.011861</td>\n",
-       "      <td>-0.007797</td>\n",
-       "      <td>0.005283</td>\n",
-       "      <td>-0.003993</td>\n",
-       "      <td>-0.016817</td>\n",
-       "      <td>-0.003906</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>WeekOfMonthClaimed</th>\n",
-       "      <td>0.275400</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.001574</td>\n",
-       "      <td>-0.005761</td>\n",
-       "      <td>0.011665</td>\n",
-       "      <td>0.008908</td>\n",
-       "      <td>0.005457</td>\n",
-       "      <td>-0.000048</td>\n",
-       "      <td>0.012175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age</th>\n",
-       "      <td>-0.007643</td>\n",
-       "      <td>0.001574</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.027475</td>\n",
-       "      <td>0.022496</td>\n",
-       "      <td>-0.006528</td>\n",
-       "      <td>0.069049</td>\n",
-       "      <td>0.001317</td>\n",
-       "      <td>0.022405</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FraudFound_P</th>\n",
-       "      <td>-0.011861</td>\n",
-       "      <td>-0.005761</td>\n",
-       "      <td>-0.027475</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.020345</td>\n",
-       "      <td>-0.007551</td>\n",
-       "      <td>0.017348</td>\n",
-       "      <td>0.007266</td>\n",
-       "      <td>-0.024760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PolicyNumber</th>\n",
-       "      <td>-0.007797</td>\n",
-       "      <td>0.011665</td>\n",
-       "      <td>0.022496</td>\n",
-       "      <td>-0.020345</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.008990</td>\n",
-       "      <td>0.002133</td>\n",
-       "      <td>-0.012312</td>\n",
-       "      <td>0.936513</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RepNumber</th>\n",
-       "      <td>0.005283</td>\n",
-       "      <td>0.008908</td>\n",
-       "      <td>-0.006528</td>\n",
-       "      <td>-0.007551</td>\n",
-       "      <td>0.008990</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000509</td>\n",
-       "      <td>0.011031</td>\n",
-       "      <td>0.009338</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Deductible</th>\n",
-       "      <td>-0.003993</td>\n",
-       "      <td>0.005457</td>\n",
-       "      <td>0.069049</td>\n",
-       "      <td>0.017348</td>\n",
-       "      <td>0.002133</td>\n",
-       "      <td>0.000509</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.003886</td>\n",
-       "      <td>-0.001170</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DriverRating</th>\n",
-       "      <td>-0.016817</td>\n",
-       "      <td>-0.000048</td>\n",
-       "      <td>0.001317</td>\n",
-       "      <td>0.007266</td>\n",
-       "      <td>-0.012312</td>\n",
-       "      <td>0.011031</td>\n",
-       "      <td>0.003886</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.013890</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Year</th>\n",
-       "      <td>-0.003906</td>\n",
-       "      <td>0.012175</td>\n",
-       "      <td>0.022405</td>\n",
-       "      <td>-0.024760</td>\n",
-       "      <td>0.936513</td>\n",
-       "      <td>0.009338</td>\n",
-       "      <td>-0.001170</td>\n",
-       "      <td>-0.013890</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    WeekOfMonth  WeekOfMonthClaimed       Age  FraudFound_P  \\\n",
-       "WeekOfMonth            1.000000            0.275400 -0.007643     -0.011861   \n",
-       "WeekOfMonthClaimed     0.275400            1.000000  0.001574     -0.005761   \n",
-       "Age                   -0.007643            0.001574  1.000000     -0.027475   \n",
-       "FraudFound_P          -0.011861           -0.005761 -0.027475      1.000000   \n",
-       "PolicyNumber          -0.007797            0.011665  0.022496     -0.020345   \n",
-       "RepNumber              0.005283            0.008908 -0.006528     -0.007551   \n",
-       "Deductible            -0.003993            0.005457  0.069049      0.017348   \n",
-       "DriverRating          -0.016817           -0.000048  0.001317      0.007266   \n",
-       "Year                  -0.003906            0.012175  0.022405     -0.024760   \n",
-       "\n",
-       "                    PolicyNumber  RepNumber  Deductible  DriverRating  \\\n",
-       "WeekOfMonth            -0.007797   0.005283   -0.003993     -0.016817   \n",
-       "WeekOfMonthClaimed      0.011665   0.008908    0.005457     -0.000048   \n",
-       "Age                     0.022496  -0.006528    0.069049      0.001317   \n",
-       "FraudFound_P           -0.020345  -0.007551    0.017348      0.007266   \n",
-       "PolicyNumber            1.000000   0.008990    0.002133     -0.012312   \n",
-       "RepNumber               0.008990   1.000000    0.000509      0.011031   \n",
-       "Deductible              0.002133   0.000509    1.000000      0.003886   \n",
-       "DriverRating           -0.012312   0.011031    0.003886      1.000000   \n",
-       "Year                    0.936513   0.009338   -0.001170     -0.013890   \n",
-       "\n",
-       "                        Year  \n",
-       "WeekOfMonth        -0.003906  \n",
-       "WeekOfMonthClaimed  0.012175  \n",
-       "Age                 0.022405  \n",
-       "FraudFound_P       -0.024760  \n",
-       "PolicyNumber        0.936513  \n",
-       "RepNumber           0.009338  \n",
-       "Deductible         -0.001170  \n",
-       "DriverRating       -0.013890  \n",
-       "Year                1.000000  "
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "corr_mat = vic_temp.corr()\n",
-    "corr_mat"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [
@@ -3127,6 +2932,129 @@
     "plt.figure(figsize=(20, 15))\n",
     "corr_mat = corr_mat.where(np.tril(np.ones(corr_mat.shape)).astype(np.bool))\n",
     "sns.heatmap(corr_mat, annot=True, cmap='Reds')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spliting Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = vic_temp.drop(columns='FraudFound_P')\n",
+    "y = vic_temp['FraudFound_P']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=40, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12335,)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    11597\n",
+       "1      738\n",
+       "Name: FraudFound_P, dtype: int64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.value_counts()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Functions for Analysis a Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name, accuracy, recall, precision, f1, roc_auc = [], [], [], [], [], []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, f1_score, recall_score, precision_score, confusion_matrix, roc_auc_score, roc_curve, ConfusionMatrixDisplay\n",
+    "def analysis_model(modelname, model, x_test, y_test):\n",
+    "    y_pred = ml_model.predict(x_test)\n",
+    "\n",
+    "    model_name.append(model_name)\n",
+    "    accuracy.append(accuracy_score(y_test, y_pred))\n",
+    "    f1.append(f1_score(y_test, y_pred))\n",
+    "    recall.append(recall_score(y_test, y_pred))\n",
+    "    precision.append(precision_score(y_test, y_pred))\n",
+    "    roc_auc.append(roc_auc_score(y_test, y_pred))\n",
+    "\n",
+    "    print('Accuracy Score:', accuracy_score(y_test, y_pred))\n",
+    "    print('F1 Score:', accuracy_score(y_test, y_pred))\n",
+    "    print('Recall Score:', accuracy_score(y_test, y_pred))\n",
+    "    print('Precision Score:', accuracy_score(y_test, y_pred))\n",
+    "    print('ROC AUC:', accuracy_score(y_test, y_pred))\n",
+    "\n",
+    "    # Confusion Matrix\n",
+    "    conf_mat = confusion_matrix(y_test, y_pred)\n",
+    "    display = ConfusionMatrixDisplay(confusion_matrix=conf_mat)\n",
+    "\n",
+    "    # ROC AUC\n",
+    "    fpr, tpr, _ = roc_curve(y_test, y_pred)\n",
+    "\n",
+    "    plt.figure(figsize=(11, 6))\n",
+    "    plt.subplot(121), plt.plot(display), plt.title('Confusion Matrix')\n",
+    "    plt.subplot(122), plt.plot(fpr, tpr), plt.title('ROC AUC'), plt.xlabel('False Positive Rate'), plt.ylabel('True Positive Rate')\n",
+    "    plt.show()"
    ]
   },
   {
